2021-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * www/download.rst, www/index.rst, README.txt: Remove references
        to ftp.graphicsmagick.org, which was shut down due to continuing
        abusive practices and lack of support from the user community.

2021-12-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/memory-private.h
        (MagickAllocateResourceLimitedMemoryAttribute): Remove extraneous
        comma.

        * coders/wpg.c (LoadWPG2Flags): Fix comment type and whitespace
        issues.

2021-11-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/caption.c (ReadCAPTIONImage): Set draw_info to NULL upon
        deallocation.  Fixes an assertion reported by Michael Melcher via
        the graphicsmagick-bugs list on November 11, 2021.

2021-11-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c (initialize_jasper): For JasPer 3.0.0 and later,
        use resource-limited memory allocators. JasPer 3.0.0 is not yet
        released at this time.

2021-11-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/gif.c (ReadGIFImage): Handle GIF files where the 'opaque'
        index matches the number of colors by producing an extra colormap
        entry of transparent black. Fixes SourceForge issue 649 "Bug with
        gm identify" where the test case produces the error "Invalid
        colormap index (index 128 >= 128 colors, /tmp/broken.gif)".

        * magick/enum_strings.c (StringToDisposeType): New utility
        function to convert a string to a DisposeType.
        (DisposeTypeToString) New utility function to convert a
        DisposeType to a string.

        * coders/msl.c (MSLEndElement): Ignore imbalanced group
        closure. Fixes oss-fuzz 40680 "graphicsmagick:coder_MSL_fuzzer:
        Heap-buffer-overflow in MSLEndElement".

2021-11-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
