@@ -37,9 +37,11 @@
 
 <p>2021-12-04  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
-* www/download.rst, www/index.rst, README.txt: Remove references
+<p>* www/index.rst: Development snapshots are now at SourceForge.</p>
+<p>* www/download.rst, www/index.rst, README.txt: Remove references
 to ftp.graphicsmagick.org, which was shut down due to continuing
-abusive practices and lack of support from the user community.</blockquote>
+abusive practices and lack of support from the user community.</p>
+</blockquote>
 <p>2021-12-03  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <p>* magick/memory-private.h
