@@ -47,10 +47,13 @@
 </colgroup>
 <tbody valign="top">
 <tr><td>Current Release</td>
-<td>1.3.36 (Released December 26, 2020) <a class="reference external" href="http://sourceforge.net/projects/graphicsmagick/files/">download release</a></td>
+<td>1.3.36 (Released December 26, 2020) <a class="reference external" href="https://sourceforge.net/projects/graphicsmagick/files/">download release</a></td>
+</tr>
+<tr><td>Development Snapshots</td>
+<td>(Updated frequently) <a class="reference external" href="https://sourceforge.net/projects/graphicsmagick/files/graphicsmagick-snapshots/">download development snapshots</a></td>
 </tr>
 <tr><td>Mercurial Repository</td>
-<td>(Updated frequently) <a class="reference external" href="http://sourceforge.net/p/graphicsmagick/code/">visit Mercurial repository</a></td>
+<td>(Updated frequently) <a class="reference external" href="https://sourceforge.net/p/graphicsmagick/code/">visit Mercurial repository</a></td>
 </tr>
 </tbody>
 </table>
